<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="30dp">

    <ImageView
        android:id="@+id/imageViewPlayerX"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOptionTitle"
        app:srcCompat="@drawable/x"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageViewPlayerO"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOptionTitle"
        app:srcCompat="@drawable/o"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewPlayerXScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text=""
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPlayerX"
        app:layout_constraintStart_toEndOf="@+id/imageViewPlayerX"
        app:layout_constraintTop_toTopOf="@+id/imageViewPlayerX" />

    <TextView
        android:id="@+id/textViewPlayerOScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text=""
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPlayerO"
        app:layout_constraintEnd_toStartOf="@+id/imageViewPlayerO"
        app:layout_constraintTop_toTopOf="@+id/imageViewPlayerO" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp"
        android:text="@string/button_delete"
        android:textColor="@color/black2"
        android:textSize="15sp"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/imageViewPlayerO"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPlayerO" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp"
        android:text="@string/button_back"
        android:textColor="@color/black2"
        android:textSize="15sp"
        app:backgroundTint="@color/green"
        app:layout_constraintStart_toStartOf="@+id/imageViewPlayerX"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPlayerX"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textViewOptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_view_option_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>